--- a/src/components/employees/employees.component.html
+++ b/src/components/employees/employees.component.html
@@ -13,7 +13,9 @@
         placeholder="Buscar Funcionários" 
         name="search" 
         />
-        <button class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md">
+        <button class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md"
+          (click)="searchEmployees(searchInput.value)"
+        >
           <mat-icon class="cursor-pointer">search</mat-icon>
         </button>
         <button class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md"
