Botão de reload nos funcionários

--- a/src/components/employees/employees.component.html
+++ b/src/components/employees/employees.component.html
@@ -18,6 +18,9 @@
         >
           <mat-icon class="cursor-pointer">search</mat-icon>
         </button>
+        <button class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md" (click)="loadEmployees()">
+          <mat-icon class="cursor-pointer">refresh</mat-icon>
+        </button>
         <button class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md"
           (click)="openCreateDialog()">
           <mat-icon>add</mat-icon>
