Adicionando botão de reload nos produtos

--- a/src/components/products/products.component.html
+++ b/src/components/products/products.component.html
@@ -19,6 +19,9 @@
           >
             <mat-icon class="cursor-pointer">search</mat-icon>
           </button>
+          <button class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md" (click)="getProducts()">
+            <mat-icon class="cursor-pointer">refresh</mat-icon>
+          </button>
         <button 
           class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md"
           (click)="openDialogPostProducts()"
