--- a/src/components/revovery/revovery.component.html
+++ b/src/components/revovery/revovery.component.html
@@ -1,1 +1,44 @@
-<p>revovery works!</p>
+<div class="min-h-screen flex items-center justify-center relative">
+    <mat-card class="w-full max-w-md p-6">
+      <!-- Botão de Voltar no topo -->
+      <div class="absolute top-4 left-4">
+        <button mat-icon-button (click)="goBackLogin()">
+          <mat-icon color="primary">arrow_back</mat-icon>
+        </button>
+      </div>
+  
+      <div class="flex flex-col items-center">
+        <mat-icon color="primary">lock_reset</mat-icon>
+        <mat-card-title class="text-center font-bold text-gray-800">
+          Recuperação de Senha
+        </mat-card-title>
+      </div>
+      <form [formGroup]="recoveryForm" (submit)="sendEmailForRecovery()" class="mt-6">
+        <mat-form-field class="w-full mb-6" appearance="fill">
+          <mat-label>Email</mat-label>
+          <mat-icon matPrefix color="primary">email</mat-icon>
+          <input
+            matInput
+            #emailInput
+            type="email"
+            formControlName="email"
+            name="email"
+            placeholder="Digite seu email"
+          />
+        </mat-form-field>
+        <button
+          mat-raised-button
+          color="primary"
+          class="w-full mb-4 flex items-center justify-center"
+          [disabled]="!recoveryForm.valid || isLoading"
+          type="submit"
+        >
+          <ng-container *ngIf="isLoading; else buttonText">
+            <mat-spinner [diameter]="24"></mat-spinner>
+          </ng-container>
+          <ng-template #buttonText>Enviar Link de Recuperação</ng-template>
+        </button>
+      </form>
+    </mat-card>
+  </div>
+  
