--- a/src/components/revovery/revovery.component.html
+++ b/src/components/revovery/revovery.component.html
@@ -1,44 +1,74 @@
 <div class="min-h-screen flex items-center justify-center relative">
     <mat-card class="w-full max-w-md p-6">
-      <!-- Botão de Voltar no topo -->
       <div class="absolute top-4 left-4">
         <button mat-icon-button (click)="goBackLogin()">
           <mat-icon color="primary">arrow_back</mat-icon>
         </button>
       </div>
-  
       <div class="flex flex-col items-center">
         <mat-icon color="primary">lock_reset</mat-icon>
         <mat-card-title class="text-center font-bold text-gray-800">
           Recuperação de Senha
         </mat-card-title>
       </div>
-      <form [formGroup]="recoveryForm" (submit)="sendEmailForRecovery()" class="mt-6">
-        <mat-form-field class="w-full mb-6" appearance="fill">
-          <mat-label>Email</mat-label>
-          <mat-icon matPrefix color="primary">email</mat-icon>
-          <input
-            matInput
-            #emailInput
-            type="email"
-            formControlName="email"
-            name="email"
-            placeholder="Digite seu email"
-          />
-        </mat-form-field>
-        <button
-          mat-raised-button
-          color="primary"
-          class="w-full mb-4 flex items-center justify-center"
-          [disabled]="!recoveryForm.valid || isLoading"
-          type="submit"
-        >
-          <ng-container *ngIf="isLoading; else buttonText">
-            <mat-spinner [diameter]="24"></mat-spinner>
-          </ng-container>
-          <ng-template #buttonText>Enviar Link de Recuperação</ng-template>
-        </button>
-      </form>
+      <mat-stepper orientation="vertical" [linear]="isLinear"  #stepper>
+        <mat-step [stepControl]="firstFormRecoveryEmail">
+          <form [formGroup]="firstFormRecoveryEmail">
+            <ng-template matStepLabel>Envie o e-mail de recuperação</ng-template>
+            <mat-form-field>
+              <mat-label>Email</mat-label>
+              <input matInput 
+                placeholder="Digite um e-mail válido"  
+                type="email" 
+                formControlName="email" 
+                name="email" 
+                required
+              />
+            </mat-form-field>
+            <div>
+              <button mat-button matStepperNext>Próximo</button>
+            </div>
+          </form>
+        </mat-step>
+        <mat-step [stepControl]="twoFormRecoveryCode">
+          <form [formGroup]="twoFormRecoveryCode">
+            <ng-template matStepLabel>Digite o código</ng-template>
+            <mat-form-field>
+              <mat-label>Código</mat-label>
+              <input matInput 
+                placeholder="Código enviado por e-mail" 
+                type="number" 
+                formControlName="code" 
+                name="code" 
+                required
+              />
+            </mat-form-field>
+            <div>
+              <button mat-button matStepperPrevious>Voltar</button>
+              <button mat-button matStepperNext>Próximo</button>
+            </div>
+          </form>
+        </mat-step>
+        <mat-step [stepControl]="threeFormRecoveryPassword">
+          <form [formGroup]="threeFormRecoveryPassword">
+            <ng-template matStepLabel>Nova Senha</ng-template>
+            <mat-form-field>
+              <mat-label>Senha</mat-label>
+              <input matInput 
+                placeholder="Digite uma nova senha" 
+                type="text" 
+                formControlName="password" 
+                name="password" 
+                required
+              />
+            </mat-form-field>
+            <div>
+              <button mat-button matStepperPrevious>Voltar</button>
+              <button mat-button matStepperNext>Próximo</button>
+            </div>
+          </form>
+        </mat-step>
+      </mat-stepper>
     </mat-card>
   </div>
   
