--- a/src/components/revovery/revovery.component.html
+++ b/src/components/revovery/revovery.component.html
@@ -5,7 +5,7 @@
           <mat-icon color="primary">arrow_back</mat-icon>
         </button>
       </div>
-      <div class="flex flex-col items-center">
+      <div class="flex flex-col items-center border-b pb-5">
         <mat-icon color="primary">lock_reset</mat-icon>
         <mat-card-title class="text-center font-bold text-gray-800">
           Recuperação de Senha
@@ -26,7 +26,9 @@
               />
             </mat-form-field>
             <div>
-              <button mat-button matStepperNext>Próximo</button>
+              <button 
+                mat-button matStepperNext
+              >Próximo</button>
             </div>
           </form>
         </mat-step>
