--- a/src/components/revovery/revovery.component.html
+++ b/src/components/revovery/revovery.component.html
@@ -27,6 +27,7 @@
             </mat-form-field>
             <div>
               <button 
+                [disabled]="!firstFormRecoveryEmail.valid"
                 mat-button matStepperNext
                 (click)="sendEmailForRecovery()"
                 >Próximo</button>
@@ -50,6 +51,7 @@
             <div>
               <button mat-button matStepperPrevious>Voltar</button>
               <button 
+                [disabled]="!twoFormRecoveryCode.valid"
                 mat-button matStepperNext
                 (click)="validateCodeRecovery()"
               >Próximo</button>
@@ -72,6 +74,7 @@
             <div>
               <button mat-button matStepperPrevious>Voltar</button>
               <button 
+                [disabled]="!threeFormRecoveryPassword.get('password')?.valid"
                 mat-button matStepperNext
                 (click)="updatePassword(recoveryCodeValidate.value)"
               >Próximo</button>
